--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "type": "commonjs",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "build:watch": "tsc -w -p tsconfig.json",
+    "build": "npx tsc -p tsconfig.json",
+    "build:watch": "npx tsc -w -p tsconfig.json",
     "start:dev": "NODE_ENV=development nodemon build/server.js",
     "start:prod": "NODE_ENV=production nodemon build/server.js",
     "start:production": "concurrently \"yarn build:watch\" \"yarn start:prod\"",
