--- a/package.json
+++ b/package.json
@@ -23,22 +23,22 @@
     "graphql-toolkit": "^0.7.5",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.6.9"
-  },
-  "devDependencies": {
+    "mongoose": "^5.6.9",
+    "concurrently": "^5.1.0",
+    "nodemon": "^1.19.1",
+    "typescript": "^3.6.3",
     "@graphql-codegen/cli": "^1.8.1",
     "@graphql-codegen/introspection": "1.8.1",
     "@graphql-codegen/typescript": "1.8.1",
-    "@graphql-codegen/typescript-resolvers": "1.8.1",
+    "@graphql-codegen/typescript-resolvers": "1.8.1"
+  },
+  "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.144",
     "@types/mongoose": "^5.5.19",
     "@types/node": "13.7.7",
-    "@types/socket.io": "^2.1.4",
-    "concurrently": "^5.1.0",
-    "nodemon": "^1.19.1",
-    "typescript": "^3.6.3"
+    "@types/socket.io": "^2.1.4"
   }
 }
