--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "concurrently": "^5.1.0",
     "dotenv": "^16.3.1",
     "expo-server-sdk": "^3.4.0",
+    "fs-capacitor": "^8.0.0",
     "graphql": "^14.4.2",
     "graphql-toolkit": "^0.7.5",
     "graphql-upload": "^16.0.2",
